--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.app.techvalley.movies">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,7 +10,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name="com.app.techvalley.movies.AboutMovieActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -57,7 +60,8 @@
 
         <activity android:name="com.app.techvalley.movies.SeeAllSimilarMoviesActivity" />
 
-        <activity android:name="com.app.techvalley.movies.SearchTVShowsActivity"
+        <activity
+            android:name="com.app.techvalley.movies.SearchTVShowsActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.Search">
             <intent-filter>
